@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-23T08:07:56Z",
+  "timestamp" : "2023-07-26T00:37:54Z",
   "count_outdated" : 1368,
   "uniques_outdated" : 521,
-  "count" : 1430,
-  "uniques" : 529,
+  "count" : 1431,
+  "uniques" : 530,
   "views" : [
     {
       "timestamp": "2023-07-12T00:00:00Z",
@@ -58,6 +58,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-07-25T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
