@@ -1,6 +1,6 @@
 {
-  "count": 62,
-  "uniques": 8,
+  "count": 63,
+  "uniques": 9,
   "views": [
     {
       "timestamp": "2023-07-12T00:00:00Z",
@@ -31,6 +31,11 @@
       "timestamp": "2023-07-22T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-07-25T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
